--- a/index.html
+++ b/index.html
@@ -140,10 +140,32 @@
               </div>
               <p>Our dedicated patient engagement app and 
                 web portal allow you to access information instantaneously (no tedeous form, long calls, 
-                or administrative hassle) and securely</p>
+                or administrative hassle) and securely </p>
                   <button>Download &#8595</button>
           </div>
       </div>
+      <div class="feedback">
+        <div class="feedbacktxt">
+          <h2>What our customer are saying</h2>
+        <hr/>
+      </div>
+        <div class="feedbackimgsay">
+          <div class="feedbacktxtcontainer">
+          <div class="feedbackimg">
+            <img src="./images/feedbackimg.png" alt="">
+          </div>
+          <div class="feedbackname">
+            <h3>Edward Newgate</h3>
+            <p>Founder Circle</p>
+          </div>
+        </div>
+          <div class="feedbackdedication">
+            <p>“Our dedicated patient engagement app and 
+              web portal allow you to access information instantaneously (no tedeous form, long calls, 
+              or administrative hassle) and securely”</p>
+          </div>
+        </div>
+      
       </div>
     </div>
   </body>
