--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
           </div>
           <div class="learnmorebtn">
-            <button class="learn">Learn More</button>
+            <button>Learn More</button>
           </div>
         </div>
         <div class="healthcare">
@@ -163,9 +163,91 @@
             <p>“Our dedicated patient engagement app and 
               web portal allow you to access information instantaneously (no tedeous form, long calls, 
               or administrative hassle) and securely”</p>
+          </div>x
+        </div>
+      </div>
+      <div class="article">
+        <div class="artclbackground">
+          <img src="images/element.png" />
+        </div>
+        <div class="toparticle">
+          <h2>Check out our latest article</h2>
+          <hr />
+            </div>
+          <div class="articlecards">
+            <div class="Acard">
+              <div class="articleimg">
+                <img src="images/Mask Group.png" alt="">
+                <!-- <img src="./images/Mask Group.png" alt=""> -->
+              </div>
+              <div class="articletxt">
+                <h5>Disease detection, check 
+                  up in the laboratory</h5>
+                  <p>In this case, the role of the health laboratory is very important to do
+                    a disease detection...</p>
+                    <button>Read more &#8594</button>
+              </div>
+            </div>
+            <div class="Acard">
+              <div class="articleimg">
+                <img src="images/Mask Group (1).png" alt="">
+                <!-- <img src="./images/Mask Group.png" alt=""> -->
+              </div>
+              <div class="articletxt">
+                <h5>Herbal medicines that are 
+                  safe for consumption</h5>
+                  <p>Herbal medicine is very widely used at this time because of 
+                    its very good for your health...</p>
+                    <button>Read more &#8594</button>
+              </div>
+            </div>
+            <div class="Acard">
+              <div class="articleimg">
+                <img src="images/Mask Group (2).png" alt="">
+                <!-- <img src="./images/Mask Group.png" alt=""> -->
+              </div>
+              <div class="articletxt">
+                <h5>Natural care for healthy 
+                  facial skin</h5>
+                  <p>A healthy lifestyle should start from now and also for your skin health.
+                    There are some...</p>
+                    <button>Read more &#8594</button>
+              </div>
+            </div>
+          </div>
+          <div class="articlebutton">
+            <button>View all</button>
+          </div>
+      </div>
+      <div class="footer">
+        <div class="footertxts">
+          <div class="firsttxt">
+            <h4>Trafalgar</h4>
+            <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online 
+              for everyone <br>©Trafalgar PTY LTD 2020. All rights reserved</p>
+          </div>
+          <div class="secondtxt">
+            <h5>Company</h5>
+            <p>About
+              Testimonials
+              Find a doctor
+              Apps</p>
+          </div>
+          <div class="thirdtxt">
+            <h5>Region</h5>
+            <p>Indonesia
+              Singapore
+              Hongkong
+              Canada</p>
+          </div>
+          <div class="fourthtxt">
+            <h5>Help</h5>
+            <p>Help center
+              Contact support
+              Instructions
+              How it works</p>
           </div>
         </div>
-      
       </div>
     </div>
   </body>
